[workspace]
resolver = "2"
members = [
    "tcslibgs",
    "tcslib",
    "tcspecial",
    "tcsmoc",
    "tcssim",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["TCSpecial Team"]
license = "MIT"
description = "TCSpecial - Spacecraft and Ground Communication System"

[workspace.dependencies]
# Shared dependencies across workspace
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"
socket2 = { version = "0.5", features = ["all"] }
libc = "0.2"
nix = { version = "0.29", features = ["poll", "fs"] }
slint = "1.9"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
ctrlc = "3.4"
