[workspace]
resolver = "2"

members = [
    "tcslibgs",
    "tcslib",
    "tcspecial",
    "tcsmoc",
    "tcssim",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["TCSpecial Team"]
license = "MIT"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libc = "0.2"
thiserror = "1.0"
#log = "0.4"
#env_logger = "0.10"
