[package]
name = "tcslib"
version = "0.1.0"
edition = "2021"
description = "TCSpecial ground software library for mission control integration"

[dependencies]
tcslibgs = { path = "../tcslibgs" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libc = "0.2"
thiserror = "1.0"
#log = "0.4"
