[package]
name = "tcsmoc"
version = "0.1.0"
edition = "2021"
description = "TCSpecial Mission Operations Center - GUI for testing and controlling tcspecial"
build = "build.rs"

[[bin]]
name = "tcsmoc"
path = "src/main.rs"

[dependencies]
tcslib = { path = "../tcslib" }
tcslibgs = { path = "../tcslibgs" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libc = "0.2"
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"
slint = "1.9"

[build-dependencies]
slint-build = "1.9"
