[package]
name = "tcsmoc"
version = "0.1.0"
edition = "2021"
description = "TCSpecial Mission Operations Center test GUI"
build = "build.rs"

[dependencies]
tcslib = { path = "../tcslib" }
tcslibgs = { path = "../tcslibgs" }
tcspecial = { path = "../tcspecial" }
slint = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libc = "0.2"
#log = "0.4"
#env_logger = "0.10"

[build-dependencies]
slint-build = "1.3"
