[package]
name = "tcspecial"
version = "0.1.0"
edition = "2021"
description = "TCSpecial spacecraft command interpreter and data handler manager"

[dependencies]
tcslibgs = { path = "../tcslibgs" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libc = "0.2"
thiserror = "1.0"
#log = "0.4"
#env_logger = "0.10"
nix = { version = "0.27", features = ["poll", "fs"] }
