[package]
name = "tcssim"
version = "0.1.0"
edition = "2021"
description = "TCSpecial Payload Simulator - GUI simulating payloads for testing"
build = "build.rs"

[[bin]]
name = "tcssim"
path = "src/main.rs"

[dependencies]
tcslibgs = { path = "../tcslibgs" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libc = "0.2"
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"
rand = "0.8"
ctrlc = "3.4"
slint = "1.9"

[build-dependencies]
slint-build = "1.9"
