[package]
name = "tcssim"
version = "0.1.0"
edition = "2021"
description = "TCSpecial Payload Simulator GUI"
build = "build.rs"

[dependencies]
tcslibgs = { path = "../tcslibgs" }
slint = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libc = "0.2"
#log = "0.4"
#env_logger = "0.10"
rand = "0.8"

[build-dependencies]
slint-build = "1.3"
