[package]
name = "tcspecial"
version = "0.1.0"
edition = "2021"
description = "TCSpecial spacecraft process - command interpreter and data handlers"

[[bin]]
name = "tcspecial"
path = "src/main.rs"

[lib]
name = "tcspecial_lib"
path = "src/lib.rs"

[dependencies]
tcslibgs = { path = "../tcslibgs" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libc = "0.2"
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"
nix = { version = "0.29", features = ["poll", "fs"] }
ctrlc = "3.4"
